# BathymetrySurvey

./: .env.production  .gitmodules  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
BoostAsyncSerial/: AsyncSerial.cpp
Commands/: commands.sh
Devices/: GPS.cpp  GPS.hpp  SerialDevice.cpp  SerialDevice.hpp
Devices/TestDevices/: GPSTest.cpp  a.out
EchoSounderDevice/: CMakeLists.txt  PingSonar.hpp  PingSonarDevice.cpp  PingSonarDevice.hpp
EchoSounderDevice/PingMain/: EchoSounder.h  ping-port.h  ping-time.cpp  ping-time.h  serial-device.cpp  serial-device.h
EchoSounderDevice/Test/: main.cpp
EchoSounderDevice/device/: ping-device-ping1d.cpp  ping-device-ping1d.h  ping-device.cpp  ping-device.h
EchoSounderDevice/message/: ping-message-all.h  ping-message-common.h  ping-message-ping1d.h  ping-message.h  ping-parser.h
GPSDevice/Device/: GPSDevice.cpp  GPSDevice.hpp  gps_parser.cpp  gps_reader.cpp
GPSDevice/Test/: gps_data.txt  gps_data2.txt  test  test.cpp
Main/: CMakeLists.txt  WebSocketServer.cpp  WebSocketServer.hpp  client.cpp  client2.cpp  main.cpp  test  test.cpp
Main/Test/: test1  test1.cpp  test10  test10.cpp  test11  test11.cpp  test2  test2.cpp  test3  test3.cpp  test4  test4.cpp  test5  test5.cpp  test6  test6.cpp  test7  test7.cpp  test8  test8.cpp  test9  test9.cpp
MockDeviceData/: GPSDeviceData.sh  PingDeviceRead.py  ReadPingDeviceData.py  xx.py
Test/: test  test.cpp
Utility/: Utility.cpp  Utility.hpp
WebSocket/: WebSocketServer.cpp  WebSocketServer.hpp
WebSocket/WebSocketResponseMessage/: WebSocketResponseMessage.hpp
backend/: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Main  config.json  entrypoint.sh  local_entrypoint.sh  main.cpp  main.hpp
backend/Config/: Config.cpp  Config.hpp
backend/EchoSounderDevice/: PingSonarDevice.cpp  PingSonarDevice.hpp
backend/GPSDevice/: GPSDevice.cpp  GPSDevice.hpp
backend/GlobalVariables/: GlobalDevicesData.cpp  GlobalDevicesData.hpp  GlobalVariable.cpp  GlobalVariable.hpp
backend/HttpServer/: HttpServer.cpp  HttpServer.hpp
backend/JsonReader/: JsonReader.cpp  JsonReader.hpp
backend/LogDevicesData/: LogDevicesData.cpp  LogDevicesData.hpp
backend/Main/: main.cpp  main.hpp
backend/MockDevice/: GPSDeviceMockData.py  PingDeviceMockData.py
backend/MockDevice/Command/: command.sh
backend/MockDevice/GenerateMockData/: GPSDeviceMockData.py  PingDeviceMockData.py
backend/MockDeviceCommand/: command.sh
backend/MockDeviceData/: GPSDeviceMockData.py  PingDeviceMockData.py
backend/WebSocket/: WebSocketServer.cpp  WebSocketServer.hpp
backend/WebsocketClientForTesting/: Client.html
backend/logs/: 32a2ffee-ae26-4d56-86df-7bcdabe32d1a_20250608_233033.csv  32a2ffee-ae26-4d56-86df-7bcdabe32d1a_20250608_233052.csv  32a2ffee-ae26-4d56-86df-7bcdabe32d1a_20250608_233132.csv  32a2ffee-ae26-4d56-86df-7bcdabe32d1a_20250608_233157.csv  32a2ffee-ae26-4d56-86df-7bcdabe32d1a_20250608_235023.csv  32a2ffee-ae26-4d56-86df-7bcdabe32d1a_20250609_131521.csv
bathymatry-UI/frontend/: package-lock.json  package.json
bathymatry-UI/frontend/public/: index.html
bathymatry-UI/frontend/src/: index.js
bathymatry-UI/frontend/src/Components/: ClientSocket.js  OfflineMap.js
frontend/: .env.development  .env.production  Dockerfile  nginx.conf  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.js  config.js  index.css  index.js
frontend/src/Components/: About.js  ClientSocket.js  Footer.js  Header.js  Home.js  MapContainer.js  OfflineMap.js  RecenterAutomatically.js  SensorData.js
frontend/src/api/: FetchData.js
